--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.1",
-    "nodemon": "^2.0.22"
+    "mongoose-encryption": "^2.1.2",
+    "mongoose-findorcreate": "^4.0.0",
+    "nodemon": "^2.0.22",
+    "passport": "^0.6.0",
+    "passport-local-mongoose": "^8.0.0"
   }
 }
