--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -4,12 +4,20 @@
         {
             "src": "index.js",
             "use": "@vercel/node"
+        },
+        {
+            "src": "auth.js",
+            "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
             "dest": "index.js"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "auth.js"
         }
     ]
 }
