--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -16,7 +16,7 @@
             "dest": "index.js"
         },
         {
-            "src": "/(.*)",
+            "src": "/auth/(.*)",
             "dest": "auth.js"
         }
     ]
