--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "mongoose-findorcreate": "^4.0.0",
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
-    "passport-local-mongoose": "^8.0.0"
+    "passport-local-mongoose": "^8.0.0",
+    "redis": "^4.6.7"
   }
 }
