--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
 
   "builds": [
     {
-      "src": "frontend/index.js",
+      "src": "frontend/src/index.js",
       "use": "@vercel/node"
     },
     {
