--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "rewrites": [
     {
-      "source": "/(.*)",
+      "source": "/home/(.*)",
       "destination": "/frontend/src/index.js"
     },
     {
