--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,20 @@
 {
-  "rewrites": [
+  "routes": [
+    { "src": "/(.*)", "dest": "/index.html" },
     {
-      "source": "/api/(.*)",
-      "destination": "backend/index.js"
+      "src": "/api/(.*)",
+      "dest": "backend/index.js"
     },
     {
-      "source": "/auth/(.*)",
-      "destination": "backend/auth.js"
+      "src": "/auth/(.*)",
+      "dest": "backend/auth.js"
     }
   ],
 
   "builds": [
     {
-      "src": "frontend/",
-      "use": "@vercel/react"
+      "src": "frontend/package.json",
+      "use": "@vercel/static-build"
     },
     {
       "src": "backend/index.js",
