--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "routes": [
-    { "src": "/(.*)", "dest": "/index.html" },
+    { "src": "/(.*)", "dest": "src/index.html" },
     {
       "src": "/api/(.*)",
       "dest": "backend/index.js"
