--- a/vercel.json
+++ b/vercel.json
@@ -1,28 +1,42 @@
 {
-  "routes": [
-    { "src": "/(.*)", "dest": "src/index.html" },
-    {
-      "src": "/api/(.*)",
-      "dest": "backend/index.js"
-    },
-    {
-      "src": "/auth/(.*)",
-      "dest": "backend/auth.js"
-    }
-  ],
-
-  "builds": [
-    {
-      "src": "frontend/package.json",
-      "use": "@vercel/static-build"
-    },
-    {
-      "src": "backend/index.js",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "backend/auth.js",
-      "use": "@vercel/node"
-    }
-  ]
-}
+    "version": 2,
+    "builds": [
+      {
+        "src": "/backend/index.js",
+        "use": "@vercel/node"
+      },
+      {
+        "src": "/backend/auth.js",
+        "use": "@vercel/node"
+      },
+      {
+        "src": "frontend/package.json",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "build"
+        }
+      }
+    ],
+    "routes": [
+      {
+        "src": "/api/(.*)",
+        "dest": "/backend/index.js"
+      },
+      {
+        "src": "/auth/(.*)",
+        "dest": "/backend/auth.js"
+      },
+      {
+        "src": "^/static/(.*)",
+        "dest": "/frontend/static/$1"
+      },
+      {
+         "src": "/(.*)\\.png",
+         "dest": "/frontend/$1.png"
+       },
+      {
+        "src": "/(.*)",
+        "dest": "/frontend/index.html"
+      }
+    ]
+  }
